--- a/samples/menu/bakery.yaml
+++ b/samples/menu/bakery.yaml
@@ -18,6 +18,7 @@ catalog:
     type: option
     items:
       - tensor: options
+        tags: [bakery_options] # Temp
         default: [regular]
         items:
           - name: butter
@@ -40,4 +41,4 @@ catalog:
               - halved
 rules:
   - parents: [bakery_products]
-    children: [bakery_options]
+    children: [bakery_options, bakery_preparations]
