--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "posttest": "npm.cmd run lint"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/node": "^14.11.2",
     "@types/prettier": "^2.7.2",
     "gts": "^3.1.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "typescript": "~4.7.0"
   },
   "dependencies": {
